tests/spec/non_conformant/errors/import/file/mixin/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/mixin"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("mixin")
}

mod control_else;

mod control_if;

mod simple;
